--- a/local.env.dist
+++ b/local.env.dist
@@ -6,8 +6,8 @@ FSBACKUP_MODE=
 LOGENTRIES_KEY=
 RESTIC_BACKUP_ARGS=
 RESTIC_FORGET_ARGS=
-RESTIC_HOST=
 RESTIC_PASSWORD=
 RESTIC_REPOSITORY=
+RESTIC_TAG=
 SOURCE_PATH=
 TARGET_PATH=
