Specify hostname Restic is to use.

--- a/local.env.dist
+++ b/local.env.dist
@@ -6,6 +6,7 @@ FSBACKUP_MODE=
 LOGENTRIES_KEY=
 RESTIC_BACKUP_ARGS=
 RESTIC_FORGET_ARGS=
+RESTIC_HOST=
 RESTIC_PASSWORD=
 RESTIC_REPOSITORY=
 RESTIC_TAG=
