Move env var back into images.

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,9 +3,6 @@ name: Build and Publish
 on:
   push:
 
-env:
-  IMAGE_NAME: ${{ vars.DOCKER_ORG }}/${{ github.event.repository.name }}
-
 jobs:
   build-and-publish:
     name: Build and Publish
@@ -24,7 +21,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.IMAGE_NAME }},
+          images: ${{ vars.DOCKER_ORG }}/${{ github.event.repository.name }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -32,3 +29,4 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
